# xaelAi

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
tests/: test_chat_history.py
xaelai/: app.py  assistant.py  chat_history.py  file_manager.py  settings.py
xaelai/storage/: yaml_storage.py
xaelai/tools/: file_manager.py  homeassistant.py  utils.py
